--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
-/config/initializers/_app_keys
-/db/schema
+
+/config/initializers/_app_keys.rb
+/db/schema.rb
